# ask-goodnotes

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: .gitignore  __init__.py  agents.py  main.py  pyproject.toml
frontend/: index.html
frontend/src/: app.css  app.tsx
