[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "python-multipart>=0.0.9",
    "openai-agents[voice]>=0.0.7",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "pydub>=0.25.1",
    "audioop-lts>=0.2.1", # Needed for pydub to convert webm to wav https://github.com/jiaaro/pydub/issues/815
]
